--- a/style.css
+++ b/style.css
@@ -1,6 +1,13 @@
 .header {
 
     background-color: rgb(50, 167, 145);
-    display: flex
+    display: flex;
+
+}
+
+
+.trybewarts-login {
+
+display: flex;
 
 }
